# makku-bar

./: Makefile  README.md  derivation.nix  example-stylix-dev.yaml  example.yaml  flake.nix  pyproject.toml  shell.nix  test_notifications_ui.sh
bar/: bar.css  bar.py  config.py  main.py  test.py
bar/modules/: bar.py  battery.py  calendar.py  icons.py  notifications.py  notmuch.py  player.py  power.py  quick_menu.py  stylix.py  vinyl.py  volume.py  window_fuzzy.py
bar/river/: __init__.py  service.py  widgets.py
bar/services/: battery.py  fenster.py  mpris.py  notifications.py  system_stats.py
bar/styles/: bar.css  calendar.css  colors.css  finder.css  main.css  menu.css  notifications.css  notmuch.css  vinyl.css  workspaces.css
bar/widgets/: fenster.py
nix/: derivation.nix  shell.nix
nix/stylix/: hm.nix  meta.nix
scripts/: launcher.py
